fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ button{
     cursor: pointer;
 }
 
-
 #login svg{
     width: 20px;
     height: 20px;
@@ -70,9 +69,9 @@ button{
 }
 
 .text-box{
-    margin-top: 100px;
+    margin-top: 240px;
     width: 80vw;
-    height: 98vh;
+    height: 110vh;
     color: black;
     border-radius: 10px;
     background-color: rgba(228, 228, 228, 1); 
@@ -151,6 +150,7 @@ h1{
 }
 
 .login-today p{
+    /* margin-top: 15px; */
     text-align: center;
 }
 
@@ -171,6 +171,7 @@ h1{
     color: black;
     text-align: justify;
     border-radius: 10px;
+    line-height: 1.6;
     background-color: rgba(228, 228, 228, 1); 
     font-family: 'Didact Gothic';
     padding: 20px;
